<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_blue"
    tools:context=".ui.home.HomeFragment">


        <TextView
            android:id="@+id/tv_art_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/title_guess"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04"/>

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:inputType="textMultiLine|number"
            android:src="@drawable/rect_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_art_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_question"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math_answer"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.40"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent" />



        <ImageView
            android:id="@+id/iv_question_outline"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/rect_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:background="@drawable/rect_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/ed_answer"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:inputType="phone"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/rect_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/iv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_prompt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.66"
            app:layout_constraintHorizontal_bias="0.82"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/iv_prompt"
            app:layout_constraintStart_toStartOf="@id/iv_prompt"
            app:layout_constraintEnd_toEndOf="@id/iv_prompt"/>

        <Button
            android:id="@+id/bu_check"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/check_answer"
            android:textSize="20sp"
            android:backgroundTint="@color/pink"
            android:textStyle="bold"
            android:clickable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_ver_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />


</androidx.constraintlayout.widget.ConstraintLayout>